Separar lógica de chat en módulo aparte. Incluir funcionalidades de nombre de usuario, lista de usuarios conectados y hora de última conexión.

--- a/views/index.html
+++ b/views/index.html
@@ -3,22 +3,95 @@
 <head>
     <title>Socket.IO chat</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font: 13px Helvetica, Arial; }
-        form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-        form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-        form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-        #messages { list-style-type: none; margin: 0; padding: 0; }
-        #messages li { padding: 5px 10px; }
-        #messages li:nth-child(odd) { background: #eee; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font: 13px Helvetica, Arial;
+        }
+
+        form {
+            background: #000;
+            padding: 3px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        
+        #formNombre {
+            bottom: 42px;
+        }
+
+        #formMensaje {
+            bottom: 0;
+        }
+
+        form input {
+            border: 0;
+            padding: 10px;
+            width: 90%;
+            margin-right: .5%;
+        }
+
+        form button {
+            width: 9%;
+            background: rgb(130, 224, 255);
+            border: none;
+            padding: 10px;
+        }
+
+        .mensajes {
+            float: left;
+            width: 60%;
+            min-height: 100px;
+        }
+
+        .usuarios {
+            width: 40%;
+            float: left;
+            border: solid 1px grey;
+        }
+
+        #messages {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        #messages li {
+            padding: 5px 10px;
+        }
+
+        #messages li:nth-child(odd) {
+            background: #eee;
+        }
     </style>
     <script src="/socket.io/socket.io.js"></script>
-    
 </head>
 <body>
-    <ul id="messages"></ul>
+    <div>
+        <div class="mensajes">
+            <ul id="messages"></ul>
+        </div>
+        <div class="usuarios">
+            <table id="usuariosConectados">
+                <thead>
+                    <td>Usuario</td>
+                    <td>Última conexión</td>
+                </thead>
+                <tbody id="cuerpoUsuarios">
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <form action="" id="formNombre">
+        <input id="nombre" autocomplete="off"/><button>Guardar</button>
+    </form>
     <form action="" id="formMensaje">
-        <input id="m" autocomplete="off" /><button>Send</button>
+        <input id="mensaje" autocomplete="off" /><button>Send</button>
     </form>
 
     <script type="text/javascript">
@@ -29,7 +102,7 @@
         // Aquí iremos añadiendo los mensajes recibidos.
         var listaMensajes = document.getElementById('messages');
 
-        // Captural el evento de mesnajes recibidos del servicio socket.io
+        // Capturar el evento de mesnajes recibidos del servicio socket.io
         // Cada vez que se produzca, añadiremos un mensaje a la lista de mensajes.
         socket.on('chat message', function(msg){
             var mensaje = document.createElement("li");
@@ -37,16 +110,46 @@
             listaMensajes.appendChild(mensaje);
         });
 
-        // Capturar el evento submit del formulario.
-        var form = document.getElementById('formMensaje');
-        form.addEventListener("submit", function(ev){
+        socket.on('online users', function(users) {
+            var tbody = document.getElementById("cuerpoUsuarios")
+            var nuevoTbody = document.createElement("tbody");
+            nuevoTbody.id = "cuerpoUsuarios";
+
+            for(var id in users) {
+                var u = users[id];
+                var celda1 = document.createElement("td");
+                celda1.innerHTML = u.nombre;
+                var celda2 = document.createElement("td");
+                celda2.innerHTML = u.ultimaConexion;
+                var fila = document.createElement("tr");
+                fila.appendChild(celda1);
+                fila.appendChild(celda2);
+                nuevoTbody.appendChild(fila);
+            }
+            tbody.parentNode.replaceChild(nuevoTbody, tbody);
+        });
+
+        // Capturar el evento submit del formulario de mensajes.
+        var formMensaje = document.getElementById('formMensaje');
+        formMensaje.addEventListener("submit", function(ev){
             ev.preventDefault(); // Prevenir submit normal del form.
 
             // Enviar el mensaje a través del servicio socket.io y limpiar
             // la caja de texto.
-            var inputMensaje = document.getElementById('m');
+            var inputMensaje = document.getElementById('mensaje');
             socket.emit('chat message', inputMensaje.value);
             inputMensaje.value = '';
+        });
+
+        // Capturar el evento submit del formulario de nickname.
+        var formNombre = document.getElementById('formNombre');
+        formNombre.addEventListener("submit", function(ev){
+            ev.preventDefault(); // Prevenir submit normal del form.
+
+            // Enviar el mensaje a través del servicio socket.io y limpiar
+            // la caja de texto.
+            var inputNombre = document.getElementById('nombre');
+            socket.emit('new username', inputNombre.value);
         });
     </script>
 </body>
